add JPA support